--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">JW Markdown Notes</string>
+    <string name="app_name">MarkdownTest</string>
+    <string name="theme">Theme.App.Base</string>
 </resources>
